Added some commands, we call edit only system commands, can't work with file's system