@@ -1,8 +1,7 @@
 package com.example.apache.shell_linux;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
+import java.io.InputStream;
 
 /**
  * Created by Apache on 26.02.2017.
@@ -14,26 +13,26 @@ public class ShellExecuter {
 
     }
 
-    public String Executer(String command){
-        StringBuffer output = new StringBuffer();
+    public String Executer(String[] command){
+        StringBuilder cmdReturn = new StringBuilder();
 
+        ProcessBuilder processBuilder;
         Process process;
         try{
-            process = Runtime.getRuntime().exec(command);
-            process.waitFor();
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            processBuilder = new ProcessBuilder(command);
+            process = processBuilder.start();
 
-            String line = "";
-            while ((line = reader.readLine()) != null){
-                output.append(line + "\n");
+            InputStream inputStream = process.getInputStream();
+            int c;
+            while ((c = inputStream.read()) != -1) {
+                cmdReturn.append((char) c);
             }
-        } catch (IOException e) {
-            e.printStackTrace();
-        } catch (InterruptedException e) {
-            e.printStackTrace();
+
+            } catch (IOException e1) {
+            e1.printStackTrace();
         }
 
-        String response = output.toString();
+        String response = cmdReturn.toString();
         return response;
     }
 }
